# thread-extension

./: .coveragerc  .editorconfig  .pylintrc  LICENSE  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: linters.yml  test.yml
docs/: conf.py  control.rst  core.rst  handler.rst  index.rst  requirements.txt
docs/_static/: state_diagram_thread_control_mixin.drawio  style.css
src/: control.py  handler.py
src/examples/: tracker.py
src/thread_extension/: __init__.py  __init__.pyi  control.py  control.pyi  handler.py  version.py
src/worker_threads/: __init__.py  __init__.pyi  control.py  control.pyi  core.py  version.py
test/: test_control.py  test_handler.py
test/thread_extension/: test_control.py  test_handler.py
tests/: test_handler.py
tests/examples/: test_tracker.py
tests/thread_extension/: test_control.py  test_handler.py
tests/worker_threads/: test_core.py
tools/local_ci/: run.bat
tools/requirements/: codequality.txt
