[metadata]
name = worker-threads
version = __version__
url = https://github.com/bauerch/worker-threads
license = MIT
author = bauerch
description = Threads for long running tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
